--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -49,14 +49,14 @@ color:#333;
 }
 
 QToolBar {
-background-color:#135170;
+background-color:#000;
 border:0px solid #000;
 padding:0;
 margin:0;
 }
 
 QToolBar > QToolButton {
-background-color:#135170;
+background-color:#000;
 border:0px solid #333;
 min-height:2.5em;
 padding: 0em 1em;
@@ -82,7 +82,7 @@ background-color:transparent;
 }
 
 QProgressBar::chunk {
-background-color:#4CA770;
+background-color:#4d4d4d;
 width: 20px;
 }
 
@@ -105,7 +105,7 @@ background-color:#dedbe5;
 }
 
 QWidget {
-selection-background-color:#4CA770; /* Object highlight color */
+selection-background-color:#4d4d4d; /* Object highlight color */
 selection-color:#fff;
 outline:0; /* Remove Annoying Focus Rectangle */
 }
@@ -146,7 +146,7 @@ background-color:transparent;
 }
 
 .QValidatedLineEdit, .QLineEdit { /* Text Entry Fields */
-border: 1px solid #4CA770;
+border: 1px solid #4d4d4d;
 font-size:11px;
 min-height:25px;
 outline:0;
@@ -166,7 +166,7 @@ background-color:#f2f2f2;
 /****************************************************************************************/
 
 QPushButton { /* Global Button Style */
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #4CA770, stop: .1 #135170, stop: .95 #135170, stop: 1 #4CA770);
+background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #303030, stop: .1 #000, stop: .95 #000, stop: 1 #303030);
 border:0;
 border-radius:3px;
 color:#ffffff;
@@ -179,7 +179,7 @@ padding-bottom:5px;
 }
 
 QPushButton:hover {
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #62a4ef, stop: .1 #0058bc, stop: .95 #0058bc, stop: 1 #62a4ef );
+background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #616161, stop: .1 #4d4d4d, stop: .95 #4d4d4d, stop: 1 #616161 );
 }
 
 QPushButton:focus {
@@ -192,7 +192,7 @@ border:1px solid #333;
 }
 
 QComboBox { /* Dropdown Menus */
-border:1px solid #4CA770;
+border:1px solid #000;
 padding: 3px 5px 3px 5px;
 background:#fcfcfc;
 min-height:25px;
@@ -204,7 +204,7 @@ background:#f2f2f2;
 }
 
 QComboBox:editable {
-background:#135170;
+background:#000;
 color:#616161;
 border:0px solid transparent;
 }
@@ -251,7 +251,7 @@ selection-color:transparent;
 }
 
 QAbstractSpinBox {
-border:1px solid #4CA770;
+border:1px solid #000;
 padding: 3px 5px 3px 5px;
 background:#fcfcfc;
 min-height:25px;
@@ -264,8 +264,8 @@ subcontrol-position: top right;
 width:21px;
 background:#fcfcfc;
 border-left:0px;
-border-right:1px solid #4CA770;
-border-top:1px solid #4CA770;
+border-right:1px solid #000;
+border-top:1px solid #000;
 border-bottom:0px;
 padding-right:1px;
 padding-left:5px;
@@ -283,8 +283,8 @@ width:21px;
 background:#fcfcfc;
 border-top:0px;
 border-left:0px;
-border-right:1px solid #4CA770;
-border-bottom:1px solid #4CA770;
+border-right:1px solid #000;
+border-bottom:1px solid #000;
 padding-right:1px;
 padding-left:5px;
 padding-bottom:2px;
@@ -303,7 +303,7 @@ outline:0;
 
 QHeaderView::section { /* Table Header Sections */
 qproperty-alignment:center;
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 0.25, stop: 0 #135170, stop: 1 #4CA770);
+background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 0.25, stop: 0 #4d4d4d, stop: 1 #000);
 color:#fff;
 min-height:25px;
 font-weight:bold;
@@ -448,7 +448,7 @@ border-radius:10px;
 }
 
 QSlider::sub-page:horizontal {
-background-color:#4CA770;
+background-color:#000;
 border-color:#c2c2c2;
 border-radius:3px;
 }
@@ -550,7 +550,7 @@ padding-right:10px;
 }
 
 QDialog#SignVerifyMessageDialog QPlainTextEdit { /* Message Signing Text */
-border:1px solid #4CA770;
+border:1px solid #000;
 background-color:#fff;
 }
 
@@ -700,17 +700,17 @@ border:0px solid #000;
 QWidget#PrivacyDialog QLabel#zCIVLabel {
 font-size:14px;
 color:#ffffff;
-background-color:#4CA770;
+background-color:#000;
 }
 
 QWidget#PrivacyDialog QLabel#oCIVLabel {
 font-size:14px;
 color:#ffffff;
-background-color:#4CA770;
+background-color:#000;
 }
 
 QWidget#PrivacyDialog QPushButton {
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #4CA770, stop: .1 #135170, stop: .95 #135170, stop: 1 #4CA770);
+background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #303030, stop: .1 #000, stop: .95 #000, stop: 1 #303030);
 border:0;
 border-radius:3px;
 color:#ffffff;
@@ -723,7 +723,7 @@ padding-bottom:5px;
 }
 
 QWidget#PrivacyDialog QPushButton:hover {
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #62a4ef, stop: .1 #0058bc, stop: .95 #0058bc, stop: 1 #62a4ef);
+background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #616161, stop: .1 #4d4d4d, stop: .95 #4d4d4d, stop: 1 #616161);
 }
 
 QWidget#PrivacyDialog QPushButton:focus {
@@ -744,7 +744,7 @@ color:#818181;
 }
 
 QWidget#PrivacyDialog QProgressBar#obfuscationProgress::chunk {
-background-color: #135170;
+background-color: #4d4d4d;
 width:1px;
 }
 
@@ -805,7 +805,7 @@ min-width:180px;
 }
 
 QDialog#RPCConsole QWidget#tab_peers QLabel#peerHeading { /* Peers Info Header */
-color:#135170;
+color:#000;
 }
 
 QDialog#RPCConsole QTableView#peerWidget::item { /* Peers Table Items */
@@ -833,7 +833,7 @@ padding-right:10px;
 }
 
 QDialog#RPCConsole .QGroupBox #line { /* Network In Line */
-background-color:#4CA770;
+background-color:#4d4d4d;
 }
 
 QDialog#RPCConsole .QGroupBox #line_2 { /* Network Out Line */
@@ -884,7 +884,7 @@ QWidget .QFrame#frame .QLabel#label_5 { /* CIV Balances Label */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 min-width:160px;
 background-color:transparent;
-color:#fff;
+color:#000;
 font-weight:bold;
 font-size:14px;
 margin-right:5px;
@@ -911,8 +911,8 @@ margin-left:16px;
 QWidget .QFrame#frame .QLabel#labelBalanceText { /* Available Balance Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
 min-width:160px;
-background-color:#4CA770;
-color:#fff;
+background-color:#f6f6f6;
+color:#000;
 margin-right:5px;
 padding-right:5px;
 font-weight:bold;
@@ -924,7 +924,6 @@ QWidget .QFrame#frame .QLabel#labelBalance { /* Available Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:12px;
 font-weight:bold;
-color:#4CA770;
 margin-left:0px;
 }
 
@@ -937,8 +936,8 @@ margin-left:16px;
 QWidget .QFrame#frame .QLabel#labelPendingText { /* Pending Balance Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
 min-width:160px;
-background-color:#4CA770;
-color:#fff;
+background-color:#f6f6f6;
+color:#000;
 margin-right:5px;
 padding-right:5px;
 font-weight:bold;
@@ -961,8 +960,8 @@ margin-left:16px;
 QWidget .QFrame#frame .QLabel#labelImmatureText { /* Immature Balance Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
 min-width:160px;
-background-color:#4CA770;
-color:#fff;
+background-color:#f6f6f6;
+color:#000;
 margin-right:5px;
 padding-right:5px;
 font-weight:bold;
@@ -985,8 +984,8 @@ margin-left:16px;
 QWidget .QFrame#frame .QLabel#labelTotalText { /* Total Balance Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
 min-width:160px;
-background-color:#4CA770;
-color:#fff;
+background-color:#f6f6f6;
+color:#000;
 margin-right:5px;
 padding-right:5px;
 font-weight:bold;
@@ -1010,7 +1009,7 @@ QWidget .QFrame#frame_4 .QLabel#label_5z_3 { /* Zerocoin Balance Label */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 min-width:160px;
 background-color:transparent;
-color:#fff;
+color:#000;
 font-weight:bold;
 font-size:14px;
 margin-right:5px;
@@ -1020,8 +1019,8 @@ padding-right:5px;
 QWidget .QFrame#frame_4 .QLabel#labelzBalanceText { /* Available zCIV Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
 min-width:160px;
-background-color:#4CA770;
-color:#fff;
+background-color:#f6f6f6;
+color:#000;
 margin-right:5px;
 padding-right:5px;
 font-weight:bold;
@@ -1033,15 +1032,14 @@ QWidget .QFrame#frame_4 .QLabel#labelzBalance { /* Available zCIV Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:12px;
 font-weight:bold;
-color:#4CA770;
 margin-left:0px;
 }
 
 QWidget .QFrame#frame_4 .QLabel#labelzBalanceUnconfirmedText { /* Unconfirmed zCIV Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
 min-width:160px;
-background-color:#4CA770;
-color:#fff;
+background-color:#f6f6f6;
+color:#000;
 margin-right:5px;
 padding-right:5px;
 font-weight:bold;
@@ -1052,16 +1050,14 @@ font-size:14px;
 QWidget .QFrame#frame_4 .QLabel#labelzBalanceUnconfirmed { /* Unconfirmed zCIV Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:12px;
-font-weight:bold;
-color:#4CA770;
 margin-left:0px;
 }
 
 QWidget .QFrame#frame_4 .QLabel#labelzBalanceMatureText { /* Mature zCIV Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
 min-width:160px;
-background-color:#4CA770;
-color:#fff;
+background-color:#f6f6f6;
+color:#000;
 margin-right:5px;
 padding-right:5px;
 font-weight:bold;
@@ -1072,16 +1068,14 @@ font-size:14px;
 QWidget .QFrame#frame_4 .QLabel#labelzBalanceMature { /* Mature zCIV Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:12px;
-font-weight:bold;
-color:#4CA770;
 margin-left:0px;
 }
 
 QWidget .QFrame#frame_4 .QLabel#labelzBalanceImmatureText { /* Immature zCIV Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
 min-width:160px;
-background-color:#4CA770;
-color:#fff;
+background-color:#f6f6f6;
+color:#000;
 margin-right:5px;
 padding-right:5px;
 font-weight:bold;
@@ -1092,8 +1086,6 @@ font-size:14px;
 QWidget .QFrame#frame_4 .QLabel#labelzBalanceImmature { /* Immature zCIV Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:12px;
-font-weight:bold;
-color:#4CA770;
 margin-left:0px;
 }
 
@@ -1101,7 +1093,7 @@ QWidget .QFrame#frame_3 .QLabel#label_5z { /* Combined Balance Label */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 min-width:160px;
 background-color:transparent;
-color:#fff;
+color:#000;
 font-weight:bold;
 font-size:14px;
 margin-right:5px;
@@ -1111,8 +1103,8 @@ padding-right:5px;
 QWidget .QFrame#frame_3 .QLabel#labelBalanceTextz { /* Available CIV Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
 min-width:160px;
-background-color:#4CA770;
-color:#fff;
+background-color:#f6f6f6;
+color:#000;
 margin-right:5px;
 padding-right:5px;
 font-weight:bold;
@@ -1124,15 +1116,14 @@ QWidget .QFrame#frame_3 .QLabel#labelBalancez { /* Available CIV Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:12px;
 font-weight:bold;
-color:#4CA770;
 margin-left:0px;
 }
 
 QWidget .QFrame#frame_3 .QLabel#labelzBalanceTextz { /* Available zCIV Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
 min-width:160px;
-background-color:#4CA770;
-color:#fff;
+background-color:#f6f6f6;
+color:#000;
 margin-right:5px;
 padding-right:5px;
 font-weight:bold;
@@ -1144,15 +1135,14 @@ QWidget .QFrame#frame_3 .QLabel#labelzBalancez { /* Available zCIV Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:12px;
 font-weight:bold;
-color:#4CA770;
 margin-left:0px;
 }
 
 QWidget .QFrame#frame_3 .QLabel#labelLockedBalanceText { /* Available zCIV Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
 min-width:160px;
-background-color:#4CA770;
-color:#fff;
+background-color:#f6f6f6;
+color:#000;
 margin-right:5px;
 padding-right:5px;
 font-weight:bold;
@@ -1164,15 +1154,14 @@ QWidget .QFrame#frame_3 .QLabel#labelLockedBalance { /* Available zCIV Balance *
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:12px;
 font-weight:normal;
-color:#4CA770;
 margin-left:0px;
 }
 
 QWidget .QFrame#frame_3 .QLabel#labelUnLockedBalanceText { /* Available zCIV Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
 min-width:160px;
-background-color:#4CA770;
-color:#fff;
+background-color:#f6f6f6;
+color:#000;
 margin-right:5px;
 padding-right:5px;
 font-weight:bold;
@@ -1184,15 +1173,14 @@ QWidget .QFrame#frame_3 .QLabel#labelUnLockedBalance { /* Available zCIV Balance
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:12px;
 font-weight:normal;
-color:#4CA770;
 margin-left:0px;
 }
 
 QWidget .QFrame#frame_3 .QLabel#labelTotalTextz { /* Available total Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
 min-width:160px;
-background-color:#4CA770;
-color:#fff;
+background-color:#f6f6f6;
+color:#000;
 margin-right:5px;
 padding-right:5px;
 font-weight:bold;
@@ -1204,7 +1192,6 @@ QWidget .QFrame#frame_3 .QLabel#labelTotalz { /* Available total Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:12px;
 font-weight:bold;
-color:#4CA770;
 margin-left:0px;
 }
 
@@ -1222,7 +1209,7 @@ background-repeat:none;
 
 QWidget .QFrame#frame_2 .QLabel#label_4 { /* Recent Transactions Label */
 min-width:180px;
-color:#fff;
+color:#000;
 margin-left:67px;
 margin-top:83px;
 margin-right:5px;
@@ -1269,7 +1256,7 @@ min-height:25px;
 }
 
 QDialog#SendCoinsDialog .QFrame#frameCoinControl .QLabel#labelCoinControlFeatures { /* Coin Control Header */
-color:#135170;
+color:#000;
 font-weight:bold;
 font-size:14px;
 }
@@ -1388,7 +1375,7 @@ min-height:27px;
 /**************************** SEND COINS ENTRY ******************************************/
 
 QStackedWidget#SendCoinsEntry .QFrame#SendCoins > .QLabel { /* Send Coin Entry Labels */
-background-color:#4CA770;
+background-color:#000;
 min-width:102px;
 font-weight:bold;
 font-size:11px;
@@ -1535,7 +1522,7 @@ QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::item {
 }
 
 QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::item:selected { /* Coin Control Item (selected) */
-background-color:#4CA770;
+background-color:#4d4d4d;
 color:#fff;
 }
 
@@ -1575,7 +1562,7 @@ background-color:#fff;
 }
 
 QWidget#ReceiveCoinsDialog .QFrame#frame2 .QLabel#label_2 { /* Label Label */
-background-color:#4CA770;
+background-color:#000;
 min-width:102px;
 color:#ffffff;
 font-weight:bold;
@@ -1593,7 +1580,7 @@ padding-right:5px;
 }
 
 QWidget#ReceiveCoinsDialog .QFrame#frame2 .QLabel#label_3 { /* Message Label */
-background-color:#4CA770;
+background-color:#000;
 min-width:102px;
 color:#ffffff;
 font-weight:bold;
@@ -1653,7 +1640,7 @@ border:1px solid #9e9e9e;
 }
 
 QWidget#ReceiveCoinsDialog .QFrame#frame .QLabel#label_6 { /* Requested Payments History Label */
-color:#135170;
+color:#000;
 font-weight:bold;
 font-size:14px;
 }
@@ -1700,7 +1687,7 @@ border:1px solid #333;
 }
 
 QCalendarWidget QWidget#qt_calendar_navigationbar { /* Calendar widget navigation bar */
-background-color:#4CA770;
+background-color:#000;
 font-weight:bold;
 }
 
