--- a/src/qt/venox.qrc
+++ b/src/qt/venox.qrc
@@ -3,7 +3,8 @@
         <file alias="bitcoin">res/icons/bitcoin.png</file>
         <file alias="address-book">res/icons/address-book.png</file>
         <file alias="quit">res/icons/quit.png</file>
-        <file alias="send">res/icons/send.png</file>
+        <file alias="send_open">res/icons/send_open.png</file>
+        <file alias="send_closed">res/icons/send_closed.png</file>
         <file alias="connect_0">res/icons/connect0_16.png</file>
         <file alias="connect_1">res/icons/connect1_16.png</file>
         <file alias="connect_2">res/icons/connect2_16.png</file>
@@ -21,16 +22,21 @@
         <file alias="eye_minus">res/icons/eye_minus.png</file>
         <file alias="eye_plus">res/icons/eye_plus.png</file>
         <file alias="options">res/icons/configure.png</file>
-        <file alias="receiving_addresses">res/icons/receive.png</file>
-        <file alias="privacy">res/icons/privacy.png</file>
+        <file alias="receiving_addresses_open">res/icons/receive_open.png</file>
+        <file alias="receiving_addresses_closed">res/icons/receive_closed.png</file>
+        <file alias="privacy_open">res/icons/privacy_open.png</file>
+        <file alias="privacy_closed">res/icons/privacy_closed.png</file>
         <file alias="editpaste">res/icons/editpaste.png</file>
         <file alias="editcopy">res/icons/editcopy.png</file>
         <file alias="add">res/icons/add.png</file>
         <file alias="bitcoin_testnet">res/icons/bitcoin_testnet.png</file>
         <file alias="edit">res/icons/edit.png</file>
-        <file alias="history">res/icons/history.png</file>
-        <file alias="overview">res/icons/overview.png</file>
-        <file alias="masternodes">res/icons/masternodes.png</file>
+        <file alias="history_open">res/icons/history_open.png</file>
+        <file alias="history_closed">res/icons/history_closed.png</file>
+        <file alias="overview_open">res/icons/overview_open.png</file>
+        <file alias="overview_closed">res/icons/overview_closed.png</file>
+        <file alias="masternodes_open">res/icons/masternodes_open.png</file>
+        <file alias="masternodes_closed">res/icons/masternodes_closed.png</file>
         <file alias="export">res/icons/export.png</file>
         <file alias="synced">res/icons/synced.png</file>
         <file alias="remove">res/icons/remove.png</file>
